# Agent-GitHub-Worknet

./: .gitignore  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml
examples/coding_project/: STRUCTURE_RULE.md
examples/coding_project/structure/: action_protocol.md  agent_notes.md  metrics.md  protocols.md  roadmap.md  rules.md  toolbox.md
examples/minimal/: STRUCTURE_RULE.md
examples/minimal/structure/: project_plan.md  protocols.md  roadmap.md
experimental/closure/: README.md  REAL_TRACE_2026-06-16.md  REAL_TRACE_2026-06-25_SERFBOUND_GNW_TRIAL.md  REAL_TRACE_2026-06-25_SOROKIT_UI_129_INCIDENT.md  ROADMAP.md  github_config.example.json
structure_rule_kit/: __init__.py  agent_hub.py  agent_ready.py  cli.py  company.py  context_pack.py  context_prune.py  decision_log.py  exporter.py  generator.py  github_bridge.py  governance.py  handoff.py  mcp_manifest.py  mcp_server.py  metrics.py  model_api.py  network.py  parser.py  rag_index.py  repo_map.py  reporting.py  runtime.py  skill_scaffold.py  status_update.py  summary.py  task.py  templates.py  toolbox_audit.py  validator.py  verify_log.py
templates/: STRUCTURE_RULE.md  action_protocol.md  important_files.md  protocols.md  roadmap.md  status.md
tests/: test_agent_ecosystem.py  test_agent_hub.py  test_agent_network.py  test_agent_tools.py  test_company.py  test_continuity_tools.py  test_generator.py  test_github_bridge.py  test_governance.py  test_metrics.py  test_network_lifecycle.py  test_parser.py  test_runtime.py  test_validator.py  test_workflow_tools.py
(+2 files in other folders)
